Change to using a radio for default card selection

--- a/shell/packages/blackrock-payments/billingSettings.html
+++ b/shell/packages/blackrock-payments/billingSettings.html
@@ -42,7 +42,7 @@ limitations under the License.
             <td class="checkbox">
               <span class="{{#unless isPrimary}}hidden{{/unless}}">Default</span>
               <span class="checkbox-wrapper">
-                <input type="checkbox" class="make-primary-card" checked="{{isPrimary}}" id="primary-{{_id}}"><label for="primary-{{_id}}"></label>
+                <input type="radio" class="make-primary-card" checked="{{isPrimary}}" id="primary-{{_id}}"><label for="primary-{{_id}}"></label>
               </span>
             </td>
             <td>{{brand}}: **** **** **** {{last4}}</td>
