Compute units are not bytes.

--- a/shell/packages/blackrock-payments/billingPrompt.html
+++ b/shell/packages/blackrock-payments/billingPrompt.html
@@ -137,7 +137,7 @@ limitations under the License.
               <div style="width: {{renderPercent used.compute plan.compute}}%"></div>
             </div>
             <div class="used">not tracked yet (beta)</div>
-            <div class="total"><span class="amount">{{renderStorage plan.compute}}</span> total</div>
+            <div class="total"><span class="amount">{{renderCu plan.compute}}</span> total</div>
           </td>
         </tr>
         <tr>
