Switch billingPrompt ordering of compute units and use computeLabel

--- a/shell/packages/blackrock-payments/billingPrompt.html
+++ b/shell/packages/blackrock-payments/billingPrompt.html
@@ -110,12 +110,12 @@ limitations under the License.
             {{/if}}
           </td></tr>
           <tr><td>
-            <p>{{renderCu compute}} CU</p>
-            <p>Compute Units*</p>
-          </td></tr>
-          <tr><td>
             <p>{{renderStorage storage}}</p>
             <p>Storage</p>
+          </td></tr>
+          <tr><td>
+            <p>{{computeLabel}}</p>
+            <p>Memory - {{renderCu compute}}CU*</p>
           </td></tr>
           <tr><td>
             <p>{{renderQuantity grains}}</p>
