Allow clicking anywhere on the text 'Add a new credit / debit card'.

--- a/shell/packages/blackrock-payments/billingSettings.html
+++ b/shell/packages/blackrock-payments/billingSettings.html
@@ -62,7 +62,7 @@ limitations under the License.
             {{#if checkoutData}}
               <iframe class="mobile-iframe-hack {{#if showPrompt}}fullscreen{{/if}}" src="{{paymentsUrl}}/checkout#{{checkoutData}}"></iframe>
             {{/if}}
-            <button class="add-card">+</button><span>Add a new credit / debit card</span>
+            <label><button class="add-card">+</button> Add a new credit / debit card</label>
           </td>
           <td></td>
           <td></td>
